feat: build from github repository

--- a/.env.prod
+++ b/.env.prod
@@ -52,7 +52,11 @@ TOKEN_SECRET="EZdgwBIak481WZB8ZkZmzKHTDkRQFzDjeTrhSlU_v2g="
 AUTH_SECRET="1UCB1NoYejWvNf0PnbM7y/SX1EYfla4SGjsNtfwmmAE="
 
 # FRONTEND
-COMPUTOR_WEB_IMAGE=computor-web:latest
+# Option 1: Use pre-built image (comment out if building from Git)
+# COMPUTOR_WEB_IMAGE=computor-web:latest
+
+# Option 2: Build from GitHub (uncomment to use)
+COMPUTOR_WEB_VERSION=main  # or specific tag/commit like 'v1.0.0' or commit hash
 
 # MinIO Configuration
 MINIO_ROOT_USER=minioadmin
