--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -147,7 +147,11 @@ services:
   
   # Frontend service
   frontend:
-    image: ${COMPUTOR_WEB_IMAGE}
+    build:
+      context: https://github.com/computor-org/computor-web.git#${COMPUTOR_WEB_VERSION:-main}
+      dockerfile: docker/Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=http://localhost:8000
     restart: unless-stopped
     depends_on:
       - uvicorn
