refactor: filesystem logic cleanup

--- a/.env.dev
+++ b/.env.dev
@@ -4,8 +4,8 @@
 # SYSTEM ENV
 SYSTEM_DEPLOYMENT_PATH=/tmp/computor
 API_URL=http://172.17.0.1:8000
-API_ROOT_PATH=/tmp/execution-backend
-API_LOCAL_STORAGE_DIR=${API_ROOT_PATH}/shared
+API_ROOT_PATH=/tmp/shared
+API_LOCAL_STORAGE_DIR=${API_ROOT_PATH}
 SYSTEM_GIT_NAME="Computor API"
 SYSTEM_GIT_EMAIL=noreply@domain.com
 
