--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -102,7 +102,7 @@ services:
     command:
       ["sh", "startup.bash"]
     volumes:
-      - ${SYSTEM_DEPLOYMENT_PATH}/shared:${API_ROOT_PATH}
+      - ${SYSTEM_DEPLOYMENT_PATH}/shared:${API_ROOT_PATH}/shared
     ports:
       - 8000:8000
     environment:
@@ -214,8 +214,9 @@ services:
       - MINIO_ACCESS_KEY=${MINIO_ROOT_USER:-minioadmin}
       - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
       - MINIO_SECURE=false
+      - API_LOCAL_STORAGE_DIR=${API_LOCAL_STORAGE_DIR}
     volumes:
-      - ${SYSTEM_DEPLOYMENT_PATH}/shared:${API_ROOT_PATH}
+      - ${SYSTEM_DEPLOYMENT_PATH}/shared:${API_ROOT_PATH}/shared
     depends_on:
       - temporal
       - postgres
@@ -246,8 +247,6 @@ services:
       - PYTHON_TEST_ENGINE_URL=${PYTHON_TEST_ENGINE_URL}
       - PYTHON_TEST_ENGINE_TOKEN=${PYTHON_TEST_ENGINE_TOKEN}
       - PYTHON_TEST_ENGINE_VERSION=${PYTHON_TEST_ENGINE_VERSION}
-    volumes:
-      - ${SYSTEM_DEPLOYMENT_PATH}/shared:${API_ROOT_PATH}
     depends_on:
       - temporal
       - minio
@@ -278,8 +277,6 @@ services:
       - MATLAB_TEST_ENGINE_TOKEN=${MATLAB_TEST_ENGINE_TOKEN}
       - MATLAB_TEST_ENGINE_VERSION=${MATLAB_TEST_ENGINE_VERSION}
       - MLM_LICENSE_FILE=${MATLAB_MLM_LICENSE_FILE}
-    volumes:
-      - ${SYSTEM_DEPLOYMENT_PATH}/shared:${API_ROOT_PATH}
     depends_on:
       - temporal
       - postgres
