--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -129,6 +129,7 @@ services:
       MINIO_SECRET_KEY: ${MINIO_ROOT_PASSWORD:-minioadmin}
       MINIO_SECURE: false
       MINIO_MAX_UPLOAD_SIZE: ${MINIO_MAX_UPLOAD_SIZE:-10485760}
+      EXTENSION_PUBLIC_DOWNLOAD_URL: ${EXTENSION_PUBLIC_DOWNLOAD_URL}
     # depends_on:
     #   postgres:
     #     condition: service_healthy
