--- a/.env.prod
+++ b/.env.prod
@@ -66,3 +66,5 @@ MINIO_REGION=us-east-1
 
 # Storage Security Configuration
 MINIO_MAX_UPLOAD_SIZE=20971520  # 20MB in bytes
+
+NEXT_PUBLIC_API_URL=
