--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -130,6 +130,7 @@ services:
       MINIO_SECURE: false
       MINIO_MAX_UPLOAD_SIZE: ${MINIO_MAX_UPLOAD_SIZE:-10485760}
       EXTENSION_PUBLIC_DOWNLOAD_URL: ${EXTENSION_PUBLIC_DOWNLOAD_URL}
+      EXTENSION_GETTING_STARTED_URL: ${EXTENSION_GETTING_STARTED_URL}
     # depends_on:
     #   postgres:
     #     condition: service_healthy
