refactor: startup config

--- a/.env.dev
+++ b/.env.dev
@@ -35,9 +35,12 @@ DISABLE_API_DEBUG_INFO=true
 TEMPORAL_WORKER_REPLICAS=1
 
 # TEMPORAL CONFIGURATION
-TEMPORAL_HOST=temporal
+# For host-based development (FastAPI running outside Docker):
+TEMPORAL_HOST=localhost
 TEMPORAL_PORT=7233
 TEMPORAL_NAMESPACE=default
+# For Docker-based development (FastAPI running in container):
+# TEMPORAL_HOST=temporal
 # Optional TLS configuration (uncomment if needed)
 # TEMPORAL_TLS_CERT=
 # TEMPORAL_TLS_KEY=
@@ -82,3 +85,6 @@ TEST_GITLAB_GROUP_ID=
 
 # FRONTEND
 COMPUTOR_WEB_IMAGE=computor-web:latest
+
+EXTENSION_PUBLIC_DOWNLOAD_URL=
+EXTENSION_GETTING_STARTED_URL=
