--- a/.env.prod
+++ b/.env.prod
@@ -68,3 +68,6 @@ MINIO_REGION=us-east-1
 MINIO_MAX_UPLOAD_SIZE=20971520  # 20MB in bytes
 
 NEXT_PUBLIC_API_URL=
+
+EXTENSION_PUBLIC_DOWNLOAD_URL=
+EXTENSION_GETTING_STARTED_URL=
