--- a/computor-backend/pyproject.toml
+++ b/computor-backend/pyproject.toml
@@ -57,7 +57,7 @@ dependencies = [
     "python-jose[cryptography]==3.3.0",
     "python-multipart==0.0.9",
     "Pyro5==5.15",
-    "uvicorn==0.35.0",
+    "uvicorn[standard]==0.35.0",
     "slowapi==0.1.9",
 ]
 
