--- a/computor-coder/pyproject.toml
+++ b/computor-coder/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "pydantic>=2.0",
     "pydantic-settings>=2.0",
     "fastapi>=0.104.0",
+    "jinja2>=3.1.0",
+    "aiofiles>=23.0.0",
 ]
 
 [project.optional-dependencies]
@@ -50,6 +52,9 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+computor_coder = ["templates/*.html", "static/**/*"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
