--- a/ops/environments/.env.common.template
+++ b/ops/environments/.env.common.template
@@ -115,30 +115,13 @@ MATLAB_BASE_IMAGE=matlab-base:latest
 # Set to true to enable Coder workspace management
 CODER_ENABLED=false
 
-# Coder domain and access
-CODER_DOMAIN=coder.localhost
-CODER_EXTERNAL_PORT=8446
-CODER_PROTOCOL=https
-CODER_PORT=8446  # Alias for compatibility
-
-# Installation directory for Coder templates and data
-CODER_DIR=/opt/coder
-
 # Coder admin credentials
 CODER_ADMIN_USERNAME=admin
 CODER_ADMIN_EMAIL=admin@example.com
 CODER_ADMIN_PASSWORD=CHANGE_ME_CODER_PASSWORD
 
-# API secret for programmatic access (generate with: openssl rand -hex 32)
-CODER_ADMIN_API_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
-
-# Coder PostgreSQL configuration (uses main PostgreSQL)
-CODER_POSTGRES_PORT=${POSTGRES_EXTERNAL_PORT}
-CODER_POSTGRES_USER=${POSTGRES_USER}
-CODER_POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-
-# Docker configuration
-DOCKER_GID=  # Leave empty to auto-detect
+# Docker configuration (auto-detected by startup.sh if empty)
+DOCKER_GID=
 
 # Registry for workspace images
 CODER_REGISTRY_PORT=5000
@@ -148,14 +131,11 @@ CODER_DISABLE_PASSWORD_AUTH=false
 CODER_DISABLE_SESSION_EXPIRY_REFRESH=false
 CODER_TELEMETRY_ENABLE=false
 
-# Workspace defaults (milliseconds)
-CODER_DEFAULT_TTL_MS=3600000  # 1 hour
-CODER_ACTIVITY_BUMP_MS=3600000  # 1 hour
-
 # URLs for backend integration
-CODER_URL=http://coder:7080  # Internal URL (Docker network)
-CODER_EXTERNAL_URL=${CODER_PROTOCOL}://${CODER_DOMAIN}:${CODER_EXTERNAL_PORT}  # External URL (browser access)
-CODER_WILDCARD_URL=  # Optional: *.coder.yourdomain.com
+# Use http://coder:7080 when backend runs in Docker, http://localhost:7080 for local dev
+CODER_URL=http://localhost:7080
+# Traefik base URL for workspace access (code-server via /coder/{user}/{workspace}/)
+CODER_WORKSPACE_BASE_URL=http://localhost:8080/coder
 
 # ============================================
 # EXTENSION CONFIGURATION
